# ml_project_template

./: .gitignore  main.py  pyproject.toml
experiments/: experiments.py
notebooks/: research.ipynb
src/data_loading/: data_loading.py
src/data_processing/: data_processing.py  feature_selection_processing.py  full_processing.py  iqr_one_hot_processing.py  no_processing.py  simple_one_hot.py
src/experiment_tracking/: experiment_tracker.py
src/models/: catboost.py  linear_regression.py  model.py  random_forest.py  svm.py
