[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-select = ['B950']
extend-ignore = ['E203', 'E501', 'E701']

[tool.poetry]
name = "ml-project-template"
version = "0.1.0"
description = ""
authors = ["MkSerdyuk <git_user@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
catboost = "^1.2.3"
xgboost = "^2.0.3"
python-dotenv = "^1.0.1"
wandb = "^0.16.6"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
